Initial hardhat install with first contract.

--- a/.gitignore
+++ b/.gitignore
@@ -373,3 +373,27 @@ testeth
 node_modules
 bin_output
 logs
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+#Hardhat files
+cache
+artifacts
+
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+#Hardhat files
+cache
+artifacts
+
